Automatically create compensation HITs

--- a/mturk/mturk.ipynb
+++ b/mturk/mturk.ipynb
@@ -49,7 +49,20 @@
    "outputs": [],
    "source": [
     "import datetime\n",
-    "\n",
+    "import boto3\n",
+    "import json\n",
+    "import copy\n",
+    "import pprint\n",
+    "from bs4 import BeautifulSoup as bs \n",
+    "from uuid import uuid4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# path to the config file \n",
     "CONFIG_PATH = \"../config.json\"\n",
     "\n",
@@ -63,44 +76,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import boto3\n",
-    "import json\n",
-    "import copy\n",
+    "# Safety flags that prevent you from accidentally messing up your HITs. \n",
+    "# Set to False except when you are performing these specific tasks.\n",
+    "ALLOW_HIT_CREATION = False\n",
+    "ALLOW_ASSIGNMENT_ADDITION = False\n",
+    "ALLOW_CREATE_QUAL = False\n",
+    "ALLOW_UPDATE_EXPIRATION = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sandbox or Production? You only spend money in Production.\n",
+    "USING_PROD = False\n",
     "\n",
-    "USING_PROD = None\n",
-    "EXTERNAL_SUBMIT = None\n",
+    "if USING_PROD:\n",
+    "    print(\"USING PROD\")\n",
+    "    endpoint_url = 'https://mturk-requester.us-east-1.amazonaws.com'\n",
+    "    origin=\"production\"\n",
+    "else:\n",
+    "    print(\"USING SANDBOX\")\n",
+    "    endpoint_url = 'https://mturk-requester-sandbox.us-east-1.amazonaws.com'\n",
+    "    origin=\"sandbox\"\n",
     "\n",
+    "session = boto3.session.Session(profile_name='default')\n",
+    "cl = session.client('mturk', region_name='us-east-1', endpoint_url=endpoint_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Read config and extract relevant settings\n",
     "with open(CONFIG_PATH, 'r') as f:\n",
     "    config = json.loads(f.read())\n",
     "    \n",
     "hit_config = config['hitCreation']\n",
     "\n",
-    "EXTERNAL_SUBMIT = config['advanced']['externalSubmit']\n",
-    "\n",
-    "# Connection to production or sandbox \n",
-    "if hit_config['production']:\n",
-    "    print(\"USING PROD\")\n",
-    "    USING_PROD = True\n",
-    "    endpoint_url = 'https://mturk-requester.us-east-1.amazonaws.com'\n",
-    "    origin=\"production\"\n",
-    "else:\n",
-    "    print(\"USING SANDBOX\")\n",
-    "    USING_PROD = False\n",
-    "    endpoint_url = 'https://mturk-requester-sandbox.us-east-1.amazonaws.com'\n",
-    "    origin=\"sandbox\"\n",
+    "external_submit = config['advanced']['externalSubmit']\n",
     "    \n",
     "hit_url = hit_config['taskUrl']\n",
+    "\n",
     "# If using an external link, add a querystring origin=sandbox or origin=production \n",
     "# for use in your js logic if you want. Not done for MTurk submits because it breaks the submit link\n",
-    "if (config['advanced']['externalSubmit']): \n",
+    "if external_submit: \n",
     "    hit_url = \"%s?origin=%s\" % (hit_url, origin)\n",
-    "    \n",
-    "# Create an API connection\n",
-    "session = boto3.session.Session(profile_name='default')\n",
-    "cl = session.client('mturk', region_name='us-east-1', endpoint_url=endpoint_url)\n",
     "\n",
-    "print(\"Configuring task as external link with data submitted to: %s\" % config['advanced']['externalSubmitUrl'] if EXTERNAL_SUBMIT else \"Configuring task as an iframe within Mturk\")\n",
+    "if external_submit:\n",
+    "    print(\"Configuring task as external link with data submitted to: %s\" % config['advanced']['externalSubmitUrl'])\n",
+    "else:\n",
+    "    print(\"Configuring task as an iframe within Mturk\")\n",
     "print(\"TASK URL: \" + hit_url)\n"
    ]
   },
@@ -117,40 +147,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Safety flags that prevent you from accidentally messing up your HITs. \n",
-    "# Set to False except when you are performing these specific tasks. \n",
-    "ALLOW_HIT_CREATION = False\n",
-    "ALLOW_ASSIGNMENT_ADDITION = False\n",
-    "ALLOW_CREATE_QUAL = False\n",
-    "ALLOW_UPDATE_EXPIRATION = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# List of qualifications that you will use to filter potential workers. \n",
     "# These require that workers come from the US and have an approval rating >= 95%\n",
     "# Edit this list to specify different qualifications for workers \n",
     "QUALS = [\n",
-    "       {\n",
-    "           'QualificationTypeId': '00000000000000000071',\n",
-    "           'Comparator': 'EqualTo',\n",
-    "           'LocaleValues': [{\n",
-    "               'Country': 'US',\n",
-    "           }],\n",
-    "       },\n",
-    "        \n",
-    "       {\n",
-    "           'QualificationTypeId': '000000000000000000L0',\n",
-    "           'Comparator': 'GreaterThanOrEqualTo',\n",
-    "           'IntegerValues': [\n",
-    "               95\n",
-    "           ],\n",
-    "       },\n",
-    "    ]"
+    "    {\n",
+    "        'QualificationTypeId': '00000000000000000071',\n",
+    "        'Comparator': 'EqualTo',\n",
+    "        'LocaleValues': [{\n",
+    "            'Country': 'US',\n",
+    "        }],\n",
+    "    },\n",
+    "    {\n",
+    "        'QualificationTypeId': '000000000000000000L0',\n",
+    "        'Comparator': 'GreaterThanOrEqualTo',\n",
+    "        'IntegerValues': [\n",
+    "            95\n",
+    "        ],\n",
+    "    },\n",
+    "]"
    ]
   },
   {
@@ -162,7 +177,7 @@
     "# Helpers for creating HITs. \n",
     "\n",
     "# generic helper that sets metadata fields based on the config file.\n",
-    "def create_hit(task, questionText): \n",
+    "def create_hit(task, questionText, quals=QUALS): \n",
     "    response = cl.create_hit(\n",
     "        MaxAssignments=task['numAssignments'],\n",
     "        AutoApprovalDelayInSeconds=604800,\n",
@@ -173,7 +188,7 @@
     "        Keywords=task['keywords'],\n",
     "        Description=task['description'],\n",
     "        Question=questionText,\n",
-    "        QualificationRequirements=QUALS,\n",
+    "        QualificationRequirements=quals,\n",
     "    )\n",
     "    print(response)\n",
     "    print(\"\\n\")\n",
@@ -205,7 +220,7 @@
     "    if not (hit_config.get('variants', False) or hit_config.get('numTasks', False)): \n",
     "        raise RuntimeError(\"You must specify either hitCreation.numTasks or hitCreation.variants in your config.json file\")\n",
     "    \n",
-    "    hit_creation_function = create_hit_external if EXTERNAL_SUBMIT else create_hit_iframe\n",
+    "    hit_creation_function = create_hit_external if external_submit else create_hit_iframe\n",
     "    \n",
     "    if hit_config.get('numTasks', False): \n",
     "        print(\"creating \" + str(hit_config['numTasks']) + \" tasks\")\n",
@@ -346,8 +361,7 @@
    "source": [
     "# Summarizes assignments for all oustanding HITs \n",
     "refresh_hits()\n",
-    "summarize_assignments(hits)\n",
-    "pass"
+    "summarize_assignments(hits)"
    ]
   },
   {
@@ -522,7 +536,7 @@
     "    if ALLOW_CREATE_QUAL: \n",
     "        response = cl.create_qualification_type(**new_qual)\n",
     "        print(response)\n",
-    "        Id = response['QualificationTypeId']\n",
+    "        Id = response['QualificationType']['QualificationTypeId']\n",
     "        print(\"id\", Id)\n",
     "        return Id\n",
     "    else: \n",
@@ -635,9 +649,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup as bs \n",
-    "import pprint\n",
-    "\n",
     "def pretty_print(obj):\n",
     "    pp = pprint.PrettyPrinter(indent=4)\n",
     "    pp.pprint(obj)\n",
@@ -686,11 +697,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create Compensation HIT\n",
+    "\n",
+    "Mistakes happen, and sometimes they can lead to a worker who put in an honest effort being unable to complete a task and get paid. It's a good idea to compensate these workers when they reach out because it helps maintain relations with workers and is the right thing to do.\n",
+    "\n",
+    "However, workers can only be paid upon completing a task. The workaround is to create a custom qualification, assign it to the worker you want to compensate, and create a no-work HIT requiring the custom qualification. This code does that."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# worker_ids is str[]\n",
+    "# compensation is str but should match the regex ^\\d*\\.\\d\\d$ (e.g. \"1.00\")\n",
+    "def compensate_workers(worker_ids, compensation):\n",
+    "    with open('compensation.xml', 'r') as myfile:\n",
+    "        question_xml=myfile.read()\n",
+    "    custom_qual = {\n",
+    "        'Name': str(uuid4()),\n",
+    "        'Keywords': 'compensation',\n",
+    "        'Description': 'Compensation for workers',\n",
+    "        'QualificationTypeStatus': 'Active',\n",
+    "        'AutoGranted': False\n",
+    "    }\n",
+    "    qual_id = create_qual(custom_qual)\n",
+    "    assign_qual(qual_id, worker_ids)\n",
+    "    task = {\n",
+    "        'numAssignments': len(worker_ids),\n",
+    "        'lifetime': 3 * 24 * 60 * 60, # 3 days\n",
+    "        'duration': 5 * 60, # 5 min\n",
+    "        'rewardAmount': compensation,\n",
+    "        'title': 'ONLY for specifically contacted workers',\n",
+    "        'keywords': 'compensation',\n",
+    "        'description': 'please enter your worker id',\n",
+    "    }\n",
+    "    quals = [{\n",
+    "        'QualificationTypeId': qual_id,\n",
+    "        'Comparator': 'Exists',\n",
+    "        'ActionsGuarded': 'DiscoverPreviewAndAccept'\n",
+    "    }]\n",
+    "    create_hit(task, question_xml, quals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "worker_ids [] # worker_id strings in a list\n",
+    "compensation = \"0.00\" # change to the amount of dollars you want to give\n",
+    "compensate_workers(worker_ids, compensation)"
+   ]
   }
  ],
  "metadata": {
