Add production back to config for now

--- a/mturk/mturk.ipynb
+++ b/mturk/mturk.ipynb
@@ -90,28 +90,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sandbox or Production? You only spend money in Production.\n",
-    "USING_PROD = False\n",
-    "\n",
-    "if USING_PROD:\n",
-    "    print(\"USING PROD\")\n",
-    "    endpoint_url = 'https://mturk-requester.us-east-1.amazonaws.com'\n",
-    "    origin=\"production\"\n",
-    "else:\n",
-    "    print(\"USING SANDBOX\")\n",
-    "    endpoint_url = 'https://mturk-requester-sandbox.us-east-1.amazonaws.com'\n",
-    "    origin=\"sandbox\"\n",
-    "\n",
-    "session = boto3.session.Session(profile_name='default')\n",
-    "cl = session.client('mturk', region_name='us-east-1', endpoint_url=endpoint_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Read config and extract relevant settings\n",
     "with open(CONFIG_PATH, 'r') as f:\n",
     "    config = json.loads(f.read())\n",
@@ -122,6 +100,18 @@
     "    \n",
     "hit_url = hit_config['taskUrl']\n",
     "\n",
+    "# Sandbox or Production? You only spend money in Production.\n",
+    "USING_PROD = hit_config['production']\n",
+    "\n",
+    "if USING_PROD:\n",
+    "    print(\"USING PROD\")\n",
+    "    endpoint_url = 'https://mturk-requester.us-east-1.amazonaws.com'\n",
+    "    origin=\"production\"\n",
+    "else:\n",
+    "    print(\"USING SANDBOX\")\n",
+    "    endpoint_url = 'https://mturk-requester-sandbox.us-east-1.amazonaws.com'\n",
+    "    origin=\"sandbox\"\n",
+    "\n",
     "# If using an external link, add a querystring origin=sandbox or origin=production \n",
     "# for use in your js logic if you want. Not done for MTurk submits because it breaks the submit link\n",
     "if external_submit: \n",
@@ -131,7 +121,10 @@
     "    print(\"Configuring task as external link with data submitted to: %s\" % config['advanced']['externalSubmitUrl'])\n",
     "else:\n",
     "    print(\"Configuring task as an iframe within Mturk\")\n",
-    "print(\"TASK URL: \" + hit_url)\n"
+    "print(\"TASK URL: \" + hit_url)\n",
+    "\n",
+    "session = boto3.session.Session(profile_name='default')\n",
+    "cl = session.client('mturk', region_name='us-east-1', endpoint_url=endpoint_url)"
    ]
   },
   {
@@ -633,6 +626,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Create Compensation HIT\n",
+    "\n",
+    "Mistakes happen, and sometimes they can lead to a worker who put in an honest effort being unable to complete a task and get paid. It's a good idea to compensate these workers when they reach out because it helps maintain relations with workers and is the right thing to do.\n",
+    "\n",
+    "However, workers can only be paid upon completing a task. The workaround is to create a custom qualification, assign it to the worker you want to compensate, and create a no-work HIT requiring the custom qualification. This code does that."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# worker_ids is str[]\n",
+    "# compensation is str but should match the regex ^\\d*\\.\\d\\d$ (e.g. \"1.00\")\n",
+    "def compensate_workers(worker_ids, compensation):\n",
+    "    with open('compensation.xml', 'r') as myfile:\n",
+    "        question_xml=myfile.read()\n",
+    "    custom_qual = {\n",
+    "        'Name': str(uuid4()),\n",
+    "        'Keywords': 'compensation',\n",
+    "        'Description': 'Compensation for workers',\n",
+    "        'QualificationTypeStatus': 'Active',\n",
+    "        'AutoGranted': False\n",
+    "    }\n",
+    "    qual_id = create_qual(custom_qual)\n",
+    "    assign_qual(qual_id, worker_ids)\n",
+    "    task = {\n",
+    "        'numAssignments': len(worker_ids),\n",
+    "        'lifetime': 3 * 24 * 60 * 60, # 3 days\n",
+    "        'duration': 5 * 60, # 5 min\n",
+    "        'rewardAmount': compensation,\n",
+    "        'title': 'ONLY for specifically contacted workers',\n",
+    "        'keywords': 'compensation',\n",
+    "        'description': 'please enter your worker id',\n",
+    "    }\n",
+    "    quals = [{\n",
+    "        'QualificationTypeId': qual_id,\n",
+    "        'Comparator': 'Exists',\n",
+    "        'ActionsGuarded': 'DiscoverPreviewAndAccept'\n",
+    "    }]\n",
+    "    create_hit(task, question_xml, quals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "worker_ids [] # worker_id strings in a list\n",
+    "compensation = \"0.00\" # change to the amount of dollars you want to give\n",
+    "compensate_workers(worker_ids, compensation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Download data"
    ]
   },
@@ -694,65 +746,6 @@
     "# Use this cell to download data\n",
     "responses = get_assignment_content(hits, download_path=SAVE_PATH, should_print=True)\n",
     "pass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Create Compensation HIT\n",
-    "\n",
-    "Mistakes happen, and sometimes they can lead to a worker who put in an honest effort being unable to complete a task and get paid. It's a good idea to compensate these workers when they reach out because it helps maintain relations with workers and is the right thing to do.\n",
-    "\n",
-    "However, workers can only be paid upon completing a task. The workaround is to create a custom qualification, assign it to the worker you want to compensate, and create a no-work HIT requiring the custom qualification. This code does that."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# worker_ids is str[]\n",
-    "# compensation is str but should match the regex ^\\d*\\.\\d\\d$ (e.g. \"1.00\")\n",
-    "def compensate_workers(worker_ids, compensation):\n",
-    "    with open('compensation.xml', 'r') as myfile:\n",
-    "        question_xml=myfile.read()\n",
-    "    custom_qual = {\n",
-    "        'Name': str(uuid4()),\n",
-    "        'Keywords': 'compensation',\n",
-    "        'Description': 'Compensation for workers',\n",
-    "        'QualificationTypeStatus': 'Active',\n",
-    "        'AutoGranted': False\n",
-    "    }\n",
-    "    qual_id = create_qual(custom_qual)\n",
-    "    assign_qual(qual_id, worker_ids)\n",
-    "    task = {\n",
-    "        'numAssignments': len(worker_ids),\n",
-    "        'lifetime': 3 * 24 * 60 * 60, # 3 days\n",
-    "        'duration': 5 * 60, # 5 min\n",
-    "        'rewardAmount': compensation,\n",
-    "        'title': 'ONLY for specifically contacted workers',\n",
-    "        'keywords': 'compensation',\n",
-    "        'description': 'please enter your worker id',\n",
-    "    }\n",
-    "    quals = [{\n",
-    "        'QualificationTypeId': qual_id,\n",
-    "        'Comparator': 'Exists',\n",
-    "        'ActionsGuarded': 'DiscoverPreviewAndAccept'\n",
-    "    }]\n",
-    "    create_hit(task, question_xml, quals)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "worker_ids [] # worker_id strings in a list\n",
-    "compensation = \"0.00\" # change to the amount of dollars you want to give\n",
-    "compensate_workers(worker_ids, compensation)"
    ]
   }
  ],
