Add for_hit_id to comp hit script

--- a/mturk/mturk.ipynb
+++ b/mturk/mturk.ipynb
@@ -641,26 +641,37 @@
    "source": [
     "# worker_ids is str[]\n",
     "# compensation is str but should match the regex ^\\d*\\.\\d\\d$ (e.g. \"1.00\")\n",
-    "def compensate_workers(worker_ids, compensation):\n",
+    "# for_hit_id is str -- optional, but helpful for records\n",
+    "def compensate_workers(worker_ids, compensation, for_hit_id=\"\"):\n",
     "    with open('compensation.xml', 'r') as myfile:\n",
     "        question_xml=myfile.read()\n",
+    "\n",
+    "    keywords = 'compensation'\n",
+    "    description = 'Compensation for HIT'\n",
+    "    if for_hit_id:\n",
+    "        keywords += ', ' + for_hit_id\n",
+    "        description += ' ' + for_hit_id\n",
+    "\n",
+    "    # create qual, assign to workers\n",
     "    custom_qual = {\n",
-    "        'Name': str(uuid4()),\n",
-    "        'Keywords': 'compensation',\n",
-    "        'Description': 'Compensation for workers',\n",
+    "        'Name': str(uuid4()), # a qual must have a unique name\n",
+    "        'Keywords': keywords,\n",
+    "        'Description': description,\n",
     "        'QualificationTypeStatus': 'Active',\n",
     "        'AutoGranted': False\n",
     "    }\n",
     "    qual_id = create_qual(custom_qual)\n",
     "    assign_qual(qual_id, worker_ids)\n",
+    "\n",
+    "    # create HIT requiring qual\n",
     "    task = {\n",
     "        'numAssignments': len(worker_ids),\n",
     "        'lifetime': 3 * 24 * 60 * 60, # 3 days\n",
     "        'duration': 5 * 60, # 5 min\n",
     "        'rewardAmount': compensation,\n",
-    "        'title': 'ONLY for specifically contacted workers',\n",
-    "        'keywords': 'compensation',\n",
-    "        'description': 'please enter your worker id',\n",
+    "        'title': description,\n",
+    "        'keywords': keywords,\n",
+    "        'description': description,\n",
     "    }\n",
     "    quals = [{\n",
     "        'QualificationTypeId': qual_id,\n",
@@ -676,9 +687,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "worker_ids [] # worker_id strings in a list\n",
+    "worker_ids = [] # worker_id strings in a list\n",
     "compensation = \"0.00\" # change to the amount of dollars you want to give\n",
-    "compensate_workers(worker_ids, compensation)"
+    "for_hit_id = \"\" # HIT ID string (what you are compensating for)\n",
+    "compensate_workers(worker_ids, compensation, for_hit_id)"
    ]
   },
   {
